# trajectory_lib

./: .gitignore  .gitmodules  CMakeLists.txt
include/: min_snap.h  min_snap_qp.h
matlab/: q_hat.m  qp_hessian.m  quadprog_play.m
matlab/close_form/: calQ.m  close_form_min_snap.m  getAsub.asv  getAsub.m  getMappingA.m  plotTrajectory1D.m  plotTrajectory3D.m
matlab/close_form/close_form_segment_duration/: calDistance.m  close_form_min_snap.m  close_form_min_snap_3axis.m  plotTrajectory2axis.m  test.m
matlab/close_form/close_form_segment_timestamp/: allocate_time.m  close_form_min_snap_3axis.m  getDerivativePrimal_3axis.m  plotTrajectory2D.m  poly_evaluate.m
matlab/close_form/nlopt_test/: minSnapCloseFormOpt.m  minsnap_nlopt.m  myconstraint_min_snap.m  myfunc.m  myfunc_back.m  myfunc_min_snap.m  test_nlopt.m  test_obj_fn.m
matlab/close_form_w_nlopt_time_duration/: allocate_time.m  calDistance.m  checkFeasibility.m  getDerivativePrimal.m  getHessian.m  getMapping.m  getSelectionC.m  getSubR.m  minSnapCloseFormOpt.m  minsnap_nlopt.m  plotTrajectory1axis.m  plotTrajectory3axis.m  plot_time.m
src/: a.out  main.cpp  main_back.cpp  main_test.cpp  min_snap.cpp  test.cpp
